# testygtk

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/data/: question_database.csv  question_datasource.c  question_datasource.h
src/data/model/: question.c  question.h
src/domain/model/: question.h
src/domain/usecase/: get_question_usecase.c  get_question_usecase.h
src/presentation/: main.c
src/presentation/app/: app.c  app.h
src/presentation/common/: buttons.c  buttons.h  ui_common.h  window.c  window.h
src/presentation/entrypoint/: entrypoint_view.c  entrypoint_view.h
src/presentation/menu/: menu_view.c  menu_view.h
src/presentation/question/: question_view.c  question_view.h
src/presentation/score/: score_view.c  score_view.h
src/res/: QuizLayout.glade
